--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@
     {% include skip-links.html %}
     {% include navigation.html %}
     {% include masthead.html %}
+    {% include mathjax_support.html %}
+
 
     {{ content }}
 
